Closed Bug 1703169 Opened 3 years ago Closed 3 years ago

XUL buttons labelled by a text child don't expose label for a11y

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The new browser info bars (pref: browser.proton.infobars.enabled) contain XUL buttons with no <label> child or label attribute. Rather, they contain a text node set using .textContent. The a11y engine doesn't currently handle this, so these buttons are unlabelled.

Previously, text children were excluded from the a11y tree, so they weren't considered when computing name from subtree.

Whiteboard: [proton-infobars]

This seems like a useful change, but in bug 1702327 I updated the buttons to set the label rather than textContent. This seems to have fixed bug 1702962 for me, so this likely isn't blocking proton any more.

Jamie, is this still needed for proton?

Flags: needinfo?(jteh)

No, it's no longer needed for Proton.

No longer blocks: 1702962
Severity: S2 → S4
Flags: needinfo?(jteh)
Whiteboard: [proton-infobars]
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/56d5a7ead1f0
Support XUL buttons labelled by text children. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
See Also: → 1848909
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: