Bug 1703169: Support XUL buttons labelled by text children. r=morgan

Previously, text children were excluded from the a11y tree, so they weren't considered when computing name from subtree.

Differential Revision: https://phabricator.services.mozilla.com/D111029